[package]
name = "BorromaRust"
version = "0.1.0"
edition = "2021"
authors = ["Jorge Rico Vivas <jorgericosoftware@gmail.com>"]
license-file = "LICENSE.txt"
description = "Crate to easily create C-like enums resolving into values"
repository = "https://github.com/JorgeRicoVivas/indexed_valued_enums"
keywords = ["valued", "enum"]
categories = ["no-std", "no-std::no-alloc"]

[lib]
crate-type = ["lib"]

[dependencies]
simple_tcp = { git = "https://github.com/JorgeRicoVivas/simple_tcp" }
fixed_index_vec = { git = "https://github.com/JorgeRicoVivas/fixed_index_vec" }
nanoserde = { version = "0.1.35", optional = true }
serde_json = { version = "1.0.108", optional = true }
serde = { version = "1.0.193", features = ["derive"], optional = true }

[features]
default = ["use_serde"]
use_nanoserde = ["nanoserde"]
use_serde = ["serde_json", "serde"]